@@ -1,5 +1,10 @@
 2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* Banter/ProviderUserManager.cs: Added the CreateProviderUser method to
+	  create and add a user in one operation
+
+2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/ProviderUserManager.cs: Changed Set to AddProviderUser and
 	  made it check for a key and throw an exception if it's there before
 	  adding it
